# suntimes

./: .dockerignore  DOCKERFILE  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: app.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
